force-app/main/default/objects/Faculty__c/fields/Experiance__c.field-meta.xml
<CustomField>
    <fullName>Experiance__c</fullName>
    <label>Experiance</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>