force-app/main/default/objects/Faculty__c/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>MaritalStatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>UnMarried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>