force-app/main/default/objects/Faculty__c/fields/Number_of_students__c.field-meta.xml
<CustomField>
    <fullName>Number_of_students__c</fullName>
    <label>Number of students</label>
    <summaryForeignKey>Student__c.Faculty__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>