force-app/main/default/objects/Faculty__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>B.SC</fullName>
            </value>
            <value>
                <fullName>B.COM</fullName>
            </value>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>M.Sc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>