force-app/main/default/objects/Faculty__c/fields/To_Enter_The_Acceptd_Data__c.field-meta.xml
<CustomField>
    <fullName>To_Enter_The_Acceptd_Data__c</fullName>
    <defaultValue>true</defaultValue>
    <label>To Enter The Acceptd Data</label>
    <type>Checkbox</type>
</CustomField>