force-app/main/default/objects/Faculty__c/validationRules/Validation_Rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Email__c ) ,  NOT( ISNUMBER( Email__c ) ) )</errorConditionFormula>
    <errorMessage>Email must be Enter.</errorMessage>
</ValidationRule>